[project]
name = "proxy-check"
version = "0.1.0"
description = "Simple script to check a single proxy or a file with list of proxies"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests[socks]>=2.32.5",
]

[project.scripts]
proxycheck = "src.main_check:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
